test/interaction/Issue639.out
(agda2-status-action "")
(agda2-info-action "*Type-checking*" "" nil)
(agda2-highlight-clear)
(agda2-status-action "")
(agda2-info-action "*All Errors*" "Issue639.agda:3.11-18: error: [SafeFlagPostulate] Cannot postulate A with safe flag when scope checking the declaration A : Set" nil)
((last . 1) . (agda2-goals-action '()))
