test/interaction/Issue639.agda
module Issue639 where

postulate A : Set
